neovim: Update repo URL so I can commit & push

--- a/roles/neovim/tasks/main.yml
+++ b/roles/neovim/tasks/main.yml
@@ -19,7 +19,7 @@
 
 - name: Clone repo
   ansible.builtin.git:
-    repo: https://github.com/Javex/neovim.git
+    repo: git@github.com:Javex/neovim.git
     dest: ~/.config/nvim
     version: main
     remote: github
