Use osc for clipboard if available as fallback

--- a/roles/tmux/files/tmux.conf
+++ b/roles/tmux/files/tmux.conf
@@ -81,4 +81,9 @@ set-option -g status-right "#{?window_bigger,[#{window_offset_x}#,#{window_offse
 # Milliseconds to display the pane numbers
 set -g display-panes-time 3000
 
+# Use osc for clipboard
+if-shell 'which osc' {
+  set-option -g @custom_copy_command 'osc copy'
+}
+
 run '~/.config/tmux/plugins/tpm/tpm'
