Restore environment in each pane

--- a/roles/tmux/files/tmux.conf
+++ b/roles/tmux/files/tmux.conf
@@ -86,4 +86,7 @@ if-shell 'which osc' {
   set-option -g @custom_copy_command 'osc copy'
 }
 
+# Let tmux restore the environment in each pane
+set -g @resurrect-hook-pre-restore-pane-processes 'for pane in $(tmux list-panes -s -F "#D"); do tmux send-keys -t "${pane}" "eval $(tmux show-environment -s)"; done'
+
 run '~/.config/tmux/plugins/tpm/tpm'
